--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap web site maker software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free html website development software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="2W2LyXdDlULvrmiZzUBDisgr02exW6aiM1RUOb2H4WRHuhnxCJ/Bn0GnGIqvrLTe4oVebMBjsgSAVFl0MRC8MJnD9UmFtdD55HWkNhaf6wFak/VBVTkY3NJXUJYWHqot" data-form-email="true">
+                    <input type="hidden" value="Xl4Cgg77DqJ1+sPEE1OKMVkrvCVFHVNV23YEMDHpfv2XEeRVcDOcq73B3rnKqGubTegxKviK1sINQ5oLKBR0slE4AzskY0+wFub1Ntg1p03+0Y5H0MoTQtax/h1gwbhu" data-form-email="true">
 
                     
 
