--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap web site building</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top web site generator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -89,7 +89,7 @@
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Watch My Story&nbsp;</h3>
                 <div class="lead"></div>
-                <div><a class="btn btn-black" href="https://www.youtube.com/watch?v=-GTzmlIE58I" target="_blank">YouTube Video Link</a></div>
+                <div><a class="btn btn-primary" href="https://www.youtube.com/watch?v=-GTzmlIE58I" target="_blank">YouTube Video Link</a></div>
             </div>
         </div>
     </div>
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="N6TEWEmEbD/iU2TsCYLR6BF8qLs4XLcPi86d8O8N14G4whuvjHViF7bVshoRRmajUGET+kaqPIZhJP1RH+KXmo3o5y9DLE8ZdjrUkQn4Lo7AgcqDLe3gxVqnzDpyu5X9" data-form-email="true">
+                        <input type="hidden" value="wHUx0Hup5/xUKzkHEJXuLLJz+VKrroIPf8josPqscw47D5xlpgNlh3CezQ3uhAmprCHT+m+rfYlYtkhtu/6Tn4ynzerPmSXpcFyJT6dTpYidVaLsMwqRH5Ttx/KetXCh" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="U4KQto9FXJFeXN4crYP7IVbjmtbhjXE814aCjA4qjdCumEAOaUmhOmwCgjvX+Ewd/loVkZZPBPk19hFzYqYuv+/+rNU2PYLOtg3kwzPjA5DUzjbIZeD8+riQcNXRXVWx" data-form-email="true">
+                    <input type="hidden" value="PNV2fq50aW+vGL3glgDNGfM307XycgefgNjBSXffH4TKAkfvGBN0C0SejQj3l+ReZ2CvXdVfg6mjXXGKnR9VhIcd0+RfplUg1PpRcEGGj49tbjSiP/PRkotZLjlG3Qmz" data-form-email="true">
 
                     
 
