--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop site creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy html web site builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="JG7ke1Zszh2KqyAkD2bB/0xmfUQHNhPJowImbDcyCwlzekXtfE7ow3/uy1MvmGVB0kUWNYDofZzdQuhN00QfxQGOuaEWdjPPJxuRTI3W8EsZ/FSk94hbwKP6wtX1WPFE" data-form-email="true">
+                    <input type="hidden" value="HABvCOsQZdZAsQm4pOeZCMRtFia8EvjI8cAcv4ESyZ1dJcVx+ry2zz4GPqApr54NG7PyanduVPWUvOYN2UdbVKqW6YFBwnKJOBedMvispTQZLYlK01KoT4WPXtXLkDNS" data-form-email="true">
 
                     
 
