--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top web site generator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile website design software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="wHUx0Hup5/xUKzkHEJXuLLJz+VKrroIPf8josPqscw47D5xlpgNlh3CezQ3uhAmprCHT+m+rfYlYtkhtu/6Tn4ynzerPmSXpcFyJT6dTpYidVaLsMwqRH5Ttx/KetXCh" data-form-email="true">
+                        <input type="hidden" value="UeUtKdrJhJdgoWzWHCyAUzAejE3KbNvjkEtCwh7GIR9ivROTRoPxdzr95E7OOO+0gyo7RQX3mO9tREDieEpnT53AdOSnZQYsmllH3GRCD7/x3/6oyYD7WHsIh+Quk1MZ" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="PNV2fq50aW+vGL3glgDNGfM307XycgefgNjBSXffH4TKAkfvGBN0C0SejQj3l+ReZ2CvXdVfg6mjXXGKnR9VhIcd0+RfplUg1PpRcEGGj49tbjSiP/PRkotZLjlG3Qmz" data-form-email="true">
+                    <input type="hidden" value="bZTEhVPWKu8VyshU1FiftcU3cmaXaONmjy9BbQNoIN+egT/OxGQVn/PEy6PS4ZkspzMo/8bHvDQbRatYeR1yBSN+wLjAy4l+taAcK8FaVQIHNRrzM/AtAGmW2S4HCnva" data-form-email="true">
 
                     
 
