--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile website design software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">responsive web site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -89,7 +89,7 @@
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Watch My Story&nbsp;</h3>
                 <div class="lead"></div>
-                <div><a class="btn btn-primary" href="https://www.youtube.com/watch?v=-GTzmlIE58I" target="_blank">YouTube Video Link</a></div>
+                <div><a class="btn btn-primary" href="https://www.youtube.com/watch?v=vXfBeIcNkA4" target="_blank">YouTube Video Link</a></div>
             </div>
         </div>
     </div>
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="UeUtKdrJhJdgoWzWHCyAUzAejE3KbNvjkEtCwh7GIR9ivROTRoPxdzr95E7OOO+0gyo7RQX3mO9tREDieEpnT53AdOSnZQYsmllH3GRCD7/x3/6oyYD7WHsIh+Quk1MZ" data-form-email="true">
+                        <input type="hidden" value="nGA2/En2dnepz8ytId5QuZQJB6voR/K2Pl0/RKapogfV8y/l4FxJ0dhwrjH0EVpWfIxpDs//TjybSqRmDzFykkU81P0Xpw+we1y1tafv6Tu42Frxo0/7EV09nq1umSOj" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="bZTEhVPWKu8VyshU1FiftcU3cmaXaONmjy9BbQNoIN+egT/OxGQVn/PEy6PS4ZkspzMo/8bHvDQbRatYeR1yBSN+wLjAy4l+taAcK8FaVQIHNRrzM/AtAGmW2S4HCnva" data-form-email="true">
+                    <input type="hidden" value="b3Z7ea7mJWZNCYRM0CA/hG1AaWTWoJCQQDIxYj6Ld00CpI3wz3clmFk+W0X0Sanphkc73vstt7XtP9ELm/XWyU/me6PMrIIfJLm8eqD6acKk5fcTMDjSeWSC+RNN3B7o" data-form-email="true">
 
                     
 
