--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">offline web site creator software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top offline site generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="k6wxeudrl1N0cnLt6WrJNEN2ze5zpPfTLI3rnyMOgIu+DMBHM0QVtdAMD1ode63Xde4SP5XwkXO7uS71KLppf6W1jlMi6Vb0srvOwfRMCHBxpAi2hRMtOnGwNqvVDAaM" data-form-email="true">
+                    <input type="hidden" value="39rqtedh9odId+p1mS3Ru+4uGlmOkqG0hPpIuobgAHFAduYBVFsyDU/fpElgyNr70PRsGKHriLXKr37dY72MnA+25iJnTpkdsUvh/4yCZij8xNrAPg1uueaHxMnvUQHF" data-form-email="true">
 
                     
 
