--- a/PowerPoint.html
+++ b/PowerPoint.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free offline web page maker software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2k" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy offline site maker software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2k" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
