--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="S1U6xHRO+5OJSFyYIFD7BSNPjl9x7t3Au5wRik3uaw7WPhwRBUH1TA8YJyxYYykFJz5w3FI2Wr2z0D46JybX7L2uaTE5/LCxliiW6a8XmEPHkItt5Te4vyE8z7C3FK/O" data-form-email="true">
+                    <input type="hidden" value="fDFxPsvqsaIKZ001don9n1MLhjIXxNJTFqQK1KlBWKPmCWoF1MVXofeGZJGs8D2oAlORw7rqnFDtWgCHiHH5IhcFenkQ5ty/0K1ZPUt9p7eCqAFO9/3/dk6k3rKW1hEs" data-form-email="true">
 
                     
 
