--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Maker</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="fDFxPsvqsaIKZ001don9n1MLhjIXxNJTFqQK1KlBWKPmCWoF1MVXofeGZJGs8D2oAlORw7rqnFDtWgCHiHH5IhcFenkQ5ty/0K1ZPUt9p7eCqAFO9/3/dk6k3rKW1hEs" data-form-email="true">
+                    <input type="hidden" value="lUNQkCvNVL8qMkts7APqbZaXzmBcwLk3qhtDtpJk00Rl3H4zE5TOl4WgJRPujEqA026R94An8fRo2EnxCaCdyQI0hCIYvvhNgH/ycb/1OakB375gHfYLZFouSDcewspS" data-form-email="true">
 
                     
 
