create github pages

--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg site maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best offline site design</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="EE46704Yp8XW0BG/MB4dYedgX0+az5u5IhZHE1InxPvIDT4EUsdosOjpdYCRCFmY4ITkWmSG5aIgb3kDJMQ0rpRyu4qFejFP0lr6AZccMRVS3cli2ECQOnxwoGzKO0lo" data-form-email="true">
+                    <input type="hidden" value="qhfWtW5ceKNKOuYqZ3nq18JovUhiK62ns6aPYPZrDOBLUSqvbHGmm1wjY6uMSV9NBy0UfSjb1fApjjsPl/wf8pss+frlErfzXtxL216SVY8+yqrRCS81L36SArrBlNgI" data-form-email="true">
 
                     
 
