--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap web page creator software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop site builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="uyy1u+jOfmMIAUDeCqrPNhWB2VU8GJeLd+fbjfQuGbWtrvJJXwyXItoccvZdEU+UFWcfKyZVXnXXY+gf8vM7X0aWs8gVDzpE3UNu5Ln6KHS5Jku3JhOIJlWkWQ3P7hUT" data-form-email="true">
+                    <input type="hidden" value="jQWrt9xGdB3juhWKwj3kPTZ2Bv+tfVXO48xreJFhDZgvinaU0f3qFy1dnWyYUnhLTQsJKZUKapJtMqhT1iOc92s/ZgWu6QTf2JRDZ0nB+H8Q1is9xLUWLIVjYsIdbfrg" data-form-email="true">
 
                     
 
